--- a/auickly/对象克隆的安全性.md
+++ b/auickly/对象克隆的安全性.md
@@ -3,7 +3,7 @@
 保证对象属性不被外界重置，最典型应用于get一个属性的时候，请看以下示例代码。
 
 # 实现一个不安全的对象获取（以获取java.util.Date为例）
-··· java
+··· Java
 class Foo {
 
 	private java.util.Date beginDate;
