修改java代码块

--- a/auickly/对象克隆的安全性.md
+++ b/auickly/对象克隆的安全性.md
@@ -3,7 +3,7 @@
 保证对象属性不被外界重置，最典型应用于get一个属性的时候，请看以下示例代码。
 
 # 实现一个不安全的对象获取（以获取java.util.Date为例）
-··· Java
+``` java
 class Foo {
 
 	private java.util.Date beginDate;
@@ -35,4 +35,4 @@ class Foo {
 		System.out.println(foo.getBeginDate());
 	}
 }
-```
+``` 
