修改标题文案

--- a/auickly/对象克隆的安全性.md
+++ b/auickly/对象克隆的安全性.md
@@ -2,7 +2,7 @@
 # 对象克隆的意义
 保证对象属性不被外界重置，最典型应用于get一个属性的时候，请看以下示例代码。
 
-# 实现一个不安全的对象获取（以获取java.util.Date为例）
+# 实现一个对象获取（以获取java.util.Date为例）
 ``` java
 class Foo {
 
