--- a/html/css/使用自定义字体.md
+++ b/html/css/使用自定义字体.md
@@ -1,1 +1,23 @@
 
+## 1. 准备字体文件
+
+## 2. 定义新的font-family
+
+```css
+@FONT-FACE {
+    font-family: 'MyCustomFontName';
+    src: url('MyCustomFontName.eot'); /* IE9 Compat Modes */
+    src: url('MyCustomFontName.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ 
+         url('MyCustomFontName.woff') format('woff'), /* Modern Browsers */ 
+         url('MyCustomFontName.ttf') format('truetype'), /* Safari, Android, iOS */ 
+         url('MyCustomFontName.svg#MyCustomFontName') format('svg');
+}
+```
+
+## 3. 使用新的字体
+
+```css
+body {
+    font-family: 'MyCustomFontName'
+}
+```
