--- a/html/css/使用自定义字体.md
+++ b/html/css/使用自定义字体.md
@@ -1,6 +1,13 @@
 
 ## 1. 准备字体文件
 
+转换字体文件工具： [网上转换工具](https://www.fontke.com/tool/convfont/)
+
+MyCustomFontName.ttf
+MyCustomFontName.woff
+MyCustomFontName.eot
+MyCustomFontName.svg
+
 ## 2. 定义新的font-family
 
 ```css
