--- a/git/命令使用.md
+++ b/git/命令使用.md
@@ -2,31 +2,43 @@
 ## 安装 Git 命令
 
 ```
-# sudo yum install git -y
+# yum install git -y
 ```
 
-## 设置用户信息
+## 客户端配置 Git 仓库操作人
 
 ```
 git config --global user.name "Your Name"
 git config --global user.email "you@example.com"
 ```
 
-## 客户端配置 SSH Key
+## 配置客户端登录 Git 远程仓库方式
 
-#### 生成新的公私钥对
+#### 密码方式
+
+会提示输入服务器登录密码
+
+#### SSH Key 方式（推荐）
+
+生成新的公私钥对：
 
 ```
 ssh-keygen
 ```
 
-#### 得到公钥，配置到 Git用户的 SSH Key
+查看公钥：
 
 ```
 vim /root/.ssh/id_rsa.pub
 ```
 
-## 创建一个新的 Git 仓库，并推送到远程
+配置到 Git 用户的 SSH Key：
+
+略。
+
+## 映射远程仓库
+
+#### 创建新的 Git 仓库，并推送到远程
 
 ```
 # mkdir mytemp
@@ -39,7 +51,7 @@ vim /root/.ssh/id_rsa.pub
 # git push -u origin master
 ```
 
-## 克隆一个 Git 远程仓库
+#### 从 Git 远程仓库克隆到本地
 
 ```
 # git clone git://xxx.git
