--- a/linux/定时任务实现.md
+++ b/linux/定时任务实现.md
@@ -1,7 +1,7 @@
 
 # Shell 脚本实现定时任务
 
-## 打开并编辑定时任务列表
+## 打开并编辑定时任务列表（保存成功后，列表里的任务会自动执行）
 
     $ crontab -e
 
@@ -16,3 +16,10 @@
 ## 任务项定义规则 (cron表达式[分钟 小时 日 月 星期] + /bin/bash + 命令)
 
     0/1 * * * * /bin/bash cmd
+
+## 案例
+
+        crontab -e
+        写入规则：*/1 * * * * /bin/bash echo `date` >> testdate.out
+        监控内容：tail -500f testdate.out
+
