--- a/linux/定时任务实现.md
+++ b/linux/定时任务实现.md
@@ -13,15 +13,15 @@
 
     $ crontab -l
 
-## 任务项定义规则 (cron表达式[分钟 小时 日 月 星期] + /bin/bash + 命令)
+## 任务项定义规则 (cron表达式[分钟 小时 日 月 星期] + 命令)
 
-    0/1 * * * * /bin/bash cmd
+    * * * * * <CMD>
 
 ## 案例
 
     crontab -e
 
-    写入规则：*/1 * * * * /bin/bash echo `date` >> testdate.out
+    写入规则：*/1 * * * * echo `date` >> testdate.out
 
     监控内容：tail -500f testdate.out
 
