--- a/linux/定时任务实现.md
+++ b/linux/定时任务实现.md
@@ -3,7 +3,7 @@
 
 ## 打开并编辑定时任务列表（保存成功后，列表里的任务会自动执行）
 
-    $ crontab -e
+    $ sudo crontab -e
 
 ## 删除当前用户的定时任务
 
@@ -19,7 +19,7 @@
 
 ## 案例
 
-    crontab -e
+    sudo crontab -e
 
     写入规则：*/1 * * * * echo `date` >> testdate.out
 
