Update and rename Spring 动态切换数据源.md to 动态切换数据源.md

--- a/spring/动态切换数据源.md
+++ b/spring/动态切换数据源.md
@@ -1,6 +1,6 @@
 
 
-## 创建动态数据源对象
+## 1. 创建动态数据源对象
 
 ```java
 public class DynamicDataSource extends AbstractRoutingDataSource {
@@ -29,7 +29,7 @@ public class DynamicDataSource extends AbstractRoutingDataSource {
 }
 ```
 
-## 配置 applicationContext-dataSource.xml 数据源
+## 2. 配置 applicationContext-dataSource.xml 数据源
 
 ```xml
 <bean id="ds1DataSource" class="org.apache.commons.dbcp2.BasicDataSource" destroy-method="close" scope="singleton">
