--- a/spring/增加声明式事务的实现.md
+++ b/spring/增加声明式事务的实现.md
@@ -26,3 +26,11 @@
 <tx:annotation-driven transaction-manager="transactionManager" proxy-target-class="true" />
 ```
 
+java方法添加事务
+
+```java
+@Transactional(isolation = Isolation.SERIALIZABLE, propagation = Propagation.REQUIRED, rollbackFor = MyBusinessException.class)
+public void login(String account, String loginPwd) throws MyBusinessException {
+    ...抛出 MyBusinessException 或子类异常则回滚事务。否则，提交事务
+}
+```
