--- a/spring/增加声明式事务的实现.md
+++ b/spring/增加声明式事务的实现.md
@@ -1,6 +1,39 @@
 
 ## 1. 配置文件方式
 
+#### 1.1. applicationContext.xml 配置
+
+配置数据源 bean
+
+```xml
+<bean id="dataSource" class="...
+</bean>
+```
+
+配置事务管理器 bean
+
+```xml
+<bean id="txManager" class="org.springframework.jdbc.datasource.DataSourceTransactionManager" scope="singleton">
+    <property name="dataSource" ref="dataSource" />
+</bean>
+```
+
+使用 AOP 切入事务管理
+
+```xml
+<tx:advice id="txAdvice" transaction-manager="txManager">
+    <tx:attributes>
+        <tx:method name="get*" read-only="true"/>
+        <tx:method name="*"/>
+    </tx:attributes>
+</tx:advice>
+
+<aop:config>
+    <aop:pointcut id="fooServiceOperation" expression="execution(* x.y.service.FooService.*(..))"/>
+    <aop:advisor advice-ref="txAdvice" pointcut-ref="fooServiceOperation"/>
+</aop:config>
+```
+
 ## 2. @Transactional 注解方式
 
 #### 2.1. applicationContext.xml 配置
@@ -15,7 +48,7 @@
 配置事务管理器 bean
 
 ```xml
-<bean id="transactionManager" class="org.springframework.jdbc.datasource.DataSourceTransactionManager" scope="singleton">
+<bean id="txManager" class="org.springframework.jdbc.datasource.DataSourceTransactionManager" scope="singleton">
     <property name="dataSource" ref="dataSource" />
 </bean>
 ```
@@ -23,10 +56,10 @@
 配置注解生效
 
 ```xml
-<tx:annotation-driven transaction-manager="transactionManager" proxy-target-class="true" />
+<tx:annotation-driven transaction-manager="txManager" proxy-target-class="true" />
 ```
 
-java方法添加事务
+#### 2.2. java 方法添加事务
 
 ```java
 @Transactional(isolation = Isolation.SERIALIZABLE, propagation = Propagation.REQUIRED, rollbackFor = MyBusinessException.class)
