--- a/spring/增加声明式事务的实现.md
+++ b/spring/增加声明式事务的实现.md
@@ -23,7 +23,8 @@
 ```xml
 <tx:advice id="txAdvice" transaction-manager="txManager">
     <tx:attributes>
-        <tx:method name="get*" read-only="true"/>
+        <tx:method name="get*" read-only="true" />
+        <tx:method name="add*" isolation="SERIALIZABLE" propagation="REQUIRED" rollback-for="x.y.MyBusinessException" />
         <tx:method name="*"/>
     </tx:attributes>
 </tx:advice>
