--- a/Microsoft Office/Microsoft Office Word/排版.md
+++ b/Microsoft Office/Microsoft Office Word/排版.md
@@ -3,23 +3,23 @@
 
 #### 1.1. 切换到【开始】选项卡， 点击多级下拉按钮。
 
-![](.img/paiban/1.png)
+![](res-img/paiban/1.png)
 
 ## 2. 打开【定义新的多级列表】对话框
 
 #### 2.1. 在【多级列表】下拉项最下测找到【定义新的多级列表】按钮。
 
-![](.img/paiban/2.png)
+![](res-img/paiban/2.png)
 
 ## 3. 设置层级级别
 
 #### 3.1. 选择左侧级别1。
 
-![](.img/paiban/3.png)
+![](res-img/paiban/3.png)
 
 #### 3.2. 确定格式，字体样式和大小。
 
-![](.img/paiban/4.png)
+![](res-img/paiban/4.png)
 
 #### 3.3. 点击【确定】按钮完成设置。
 
