--- a/数据验证规则.md
+++ b/数据验证规则.md
@@ -1,11 +1,13 @@
 
-真实姓名
-支持中文 [\u4e00-\u9fa5]
+## 真实姓名
 
-手机号
+#### 支持中文 [\u4e00-\u9fa5]
 
-邮箱地址
+## 手机号
 
-企业名称
-支持中文/圆括号 [\u4e00-\u9fa5()（）]
+## 邮箱地址
+
+## 企业名称
+
+#### 支持中文/圆括号 [\u4e00-\u9fa5()（）]
 
